Apply Kotlin DSL JDK16 workaround at Gradle daemon level